# OhSyTe

Harjoitustyo_eppumelto/today/: Cargo.toml
Harjoitustyo_eppumelto/today/src/: birthday.rs  cli.rs  events.rs  filter.rs  lib.rs  main.rs
Harjoitustyo_eppumelto/today/src/providers/: csvfile.rs  mod.rs  sqlite.rs  textfile.rs  web.rs
KT1/fibonaccin_luku/: Cargo.toml
KT1/fibonaccin_luku/src/: main.rs
KT2/events/src/: main.rs
KT3/Events/: Cargo.toml
KT3/Events/src/: main.rs
KT4/Birthday/: Cargo.toml
KT4/Birthday/src/: main.rs
KT5/today/src/: main.rs
KT6/today/src/: events.rs  lib.rs  main.rs
KT6/today/src/providers/: mod.rs  my_events_provider.rs
KT7/today/: Cargo.toml
KT7/today/src/: events.rs  lib.rs  main.rs
KT7/today/src/providers/: mod.rs
KT8/today/: Cargo.toml  events.db
KT8/today/src/: events.rs  lib.rs
KT8/today/src/providers/: mod.rs  sqlite.rs  textfile.rs  web.rs
KT9/today/: .gitignore
KT9/today/src/: events.rs  filter.rs  lib.rs  main.rs
KT9/today/src/providers/: csvfile.rs  mod.rs
